fix media querys on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1094,7 +1094,7 @@ main.main-de-contacto{
 
 	}
 		
-	}
+	
 	/*####################################################*/
 	/*####################################################*/
 	/*####################################################*/
@@ -1199,7 +1199,6 @@ main.main-de-contacto{
 	div.dropdown{
 		/*___Estilos___*/
 
-		background-color: ;
 
 		border: 2px solid white;
 		border-radius: 36px;
@@ -1651,7 +1650,6 @@ main.main-de-contacto{
 
 		/*___Tamaño___*/
 		width: 480px;
-		height: ;
 
 
 		/*____Flex___*/
